--- a/apps/ui/templates/base.html
+++ b/apps/ui/templates/base.html
@@ -609,6 +609,7 @@
             background-color: var(--color-surface);
             border-top: 1px solid var(--color-border);
             border-bottom: 1px solid var(--color-border);
+            margin-bottom: 3rem;
         }
 
         .status-inner {
